compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@empty_impl.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"impl Int32 {}\")"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        0..4,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Int32",
                            location: Location(
                                5..10,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            5..10,
                        ),
                    },
                },
            ),
            methods: [],
            type_parameters: [],
            location: Location(
                0..13,
            ),
        },
    ),
]
