compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@ext_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            impl Foo {\n                fn external bar() -> Int32\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        13..17,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                18..21,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            18..21,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Private(
                        Private {
                            location: Location(
                                40..42,
                            ),
                        },
                    ),
                    external: true,
                    name: Identifier {
                        name: "bar",
                        location: Location(
                            52..55,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Int32",
                                        location: Location(
                                            61..66,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        61..66,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [],
                        location: Location(
                            79..80,
                        ),
                    },
                    location: Location(
                        40..66,
                    ),
                    documentation: None,
                },
            ],
            location: Location(
                13..80,
            ),
        },
    ),
]
