compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@generic_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            impl Foo {\n                fn bar<T>() -> Int32 { }\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        13..17,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                18..21,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            18..21,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Private(
                        Private {
                            location: Location(
                                40..42,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "bar",
                        location: Location(
                            43..46,
                        ),
                    },
                    parameters: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: Location(
                                    47..48,
                                ),
                            },
                            constraints: [],
                        },
                    ],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Int32",
                                        location: Location(
                                            55..60,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        55..60,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [],
                        location: Location(
                            61..64,
                        ),
                    },
                    location: Location(
                        40..64,
                    ),
                    documentation: None,
                },
            ],
            type_parameters: [],
            location: Location(
                13..78,
            ),
        },
    ),
]
