compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@invalid_decl_name.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"struct 1A {}\")"
---
ExpectedStructName {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "struct 1A {}",
        package: PackageId(
            0,
        ),
    },
    range: 7..8,
}
