compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@invalid_impl_name.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"impl 1A {}\")"
---
UnexpectedType {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "impl 1A {}",
        package: PackageId(
            0,
        ),
    },
    range: 5..6,
    actual: integer,
}
