compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            impl Foo {\n                fn bar() -> Int32 {\n                    return 0;\n                }\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        13..17,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                18..21,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            18..21,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Private(
                        Private {
                            location: Location(
                                40..42,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "bar",
                        location: Location(
                            43..46,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Int32",
                                        location: Location(
                                            52..57,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        52..57,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Literal(
                                            Int(
                                                IntLiteral {
                                                    value: 0,
                                                    location: Location(
                                                        87..88,
                                                    ),
                                                    kind: I32,
                                                },
                                            ),
                                        ),
                                    ),
                                    location: Location(
                                        80..89,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            58..107,
                        ),
                    },
                    location: Location(
                        40..107,
                    ),
                    documentation: None,
                },
            ],
            location: Location(
                13..121,
            ),
        },
    ),
]
