compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@method_in_struct.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"struct Foo { pub fn bar() -> void { } }\")"
---
MethodInStruct {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "struct Foo { pub fn bar() -> void { } }",
        package: PackageId(
            0,
        ),
    },
    range: 20..23,
}
