compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@method_no_ret.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            impl Foo {\n                fn bar() { }\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        13..17,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                18..21,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            18..21,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Private(
                        Private {
                            location: Location(
                                40..42,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "bar",
                        location: Location(
                            43..46,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: None,
                    block: Block {
                        statements: [],
                        location: Location(
                            49..52,
                        ),
                    },
                    location: Location(
                        40..52,
                    ),
                    documentation: None,
                },
            ],
            location: Location(
                13..66,
            ),
        },
    ),
]
