compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@operator_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            impl Foo {\n                pub fn ==() -> bool {\n                    return true;\n                }\n            }\"#)"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        13..17,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Foo",
                            location: Location(
                                18..21,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            18..21,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Public(
                        Public {
                            location: Location(
                                40..43,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "==",
                        location: Location(
                            47..49,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "bool",
                                        location: Location(
                                            55..59,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        55..59,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Literal(
                                            Boolean(
                                                BooleanLiteral {
                                                    value: true,
                                                    location: Location(
                                                        89..93,
                                                    ),
                                                },
                                            ),
                                        ),
                                    ),
                                    location: Location(
                                        82..94,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            60..112,
                        ),
                    },
                    location: Location(
                        40..112,
                    ),
                    documentation: None,
                },
            ],
            type_parameters: [],
            location: Location(
                13..126,
            ),
        },
    ),
]
