compiler/lume_parser/src/snapshots/lume_parser__parser__tests__struct_snapshots@property_no_default.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            struct Foo {\n                x: Int32;\n            }\"#)"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        20..23,
                    ),
                },
                builtin: false,
                properties: [
                    Property {
                        visibility: Private(
                            Private {
                                location: Location(
                                    42..43,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "x",
                            location: Location(
                                42..43,
                            ),
                        },
                        property_type: Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Int32",
                                        location: Location(
                                            45..50,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        45..50,
                                    ),
                                },
                            },
                        ),
                        default_value: None,
                        location: Location(
                            42..51,
                        ),
                        documentation: None,
                    },
                ],
                type_parameters: [],
                location: Location(
                    13..65,
                ),
                documentation: None,
            },
        ),
    ),
]
